@@ -280,6 +280,9 @@ SQLRETURN SQLDescribeColW( SQLHSTMT statement_handle,
 
         return function_return( SQL_HANDLE_STMT, statement, SQL_ERROR );
     }
+    /* 
+     * This seems to be down to the driver in the MS DM
+     *
     else if ( statement -> state == STATE_S2 )
     {
         dm_log_write( __FILE__, 
@@ -294,6 +297,7 @@ SQLRETURN SQLDescribeColW( SQLHSTMT statement_handle,
 
         return function_return( SQL_HANDLE_STMT, statement, SQL_ERROR );
     }
+    */
     else if ( statement -> state == STATE_S4 )
     {
         dm_log_write( __FILE__, 
